--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy:gh": "yarn build --prod --base-href=https://mohammadmanzoor8972.github.io/movies/ && ngh"
   },
   "eslintConfig": {
     "extends": "react-app"
