--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy:gh": "yarn build --prod --base-href=https://mohammadmanzoor8972.github.io/movies/ && ngh"
+    "deploy:gh": "yarn build --prod --base-href=https://mohammadmanzoor8972.github.io/carter/"
   },
   "eslintConfig": {
     "extends": "react-app"
